# multi-agent-core

./: Dockerfile  LICENSE  README.md  compose.yml
.devcontainer/: devcontainer.json
app/: .gitignore  Dockerfile  main.py  pyproject.toml
app/controls/: agent.py  agent_response.py  basic_chat.py  chat_chain.py  classify.py  llm.py  script.py  user_response.py
app/models/: agent_response.py  chat_message.py  scripts.py  speaker.py  user_response.py
app/repository/database/: mongoDB.py
app/settings/: api_setting.py  db_setting.py  get_template.py
app/settings/templates/: Classify.txt  CreateOptions.txt  CreateScript.txt  EMA.txt  NOI.txt  SAI.txt
app/tests/: test_classify.py  test_ping.py
