[tool.poetry]
name = "multi-agent-core"
version = "0.1.0"
description = "web api for multi agent application."
authors = ["himantyu-yuma"]
license = "Unlicensed"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
httpx = "^0.24.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
