[tool.poetry]
name = "multi-agent-core"
version = "0.1.0"
description = "web api for multi agent application."
authors = ["himantyu-yuma"]
license = "Unlicensed"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
langchain = "^0.0.145"
openai = "^0.27.4"
pymongo = "^4.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
httpx = "^0.24.0"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79

[tool.isort]
include_trailing_comma = "True"
line_length = 79
multi_line_output = 3
use_parentheses = "True"